# irog-static-analyzer

./: CMakeLists.txt  README.md
example/: function_name.cpp
include/: checker_ast_consumer.hpp  checker_ast_visitor.hpp  checker_frontend_action.hpp
src/: analyzer.cpp  main.cpp
